changes according to (some of) Pete Rivett's comments

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1,3 +1,15 @@
+% remaining comments from Bernd:
+%% - 132, 4: in Menge function Symbols F: "|" durch "\mid" ersetzen.
+%% - 132, 5: in Menge predicate Symbols P:
+%%     zweimal "|" durch "\mid" ersetzen.
+%% - 132, -10 und Fußnote:
+%%     Notation "t[a/x]" kenne ich eigentlich als "t[x/a]" ????
+%% - 132, -6: fehlendes Komma in "\exists z_1 , \ldots  z_{n-1}",
+%%     also  "\exists z_1 , \ldots , z_{n-1}"
+%% - 133, 4--7: in Proposition 20 und Beweis:
+%%     4-mal "|" durch "\mid" ersetzen.
+%% - 134, 6: zweimal "..." durch "\ldots" ersetzen. 
+
 % arara: pdflatex: { synctex: on } 
 % arara: makeindex 
 % arara: pdflatex: { synctex: on } 
@@ -1603,10 +1615,10 @@ projections and/or logic projections.
 \item
 Software that implements machine \emph{reasoning} about OMS (e.g., theorem proving, approximation)  complies with this specification if and only if it interprets  DOL documents according to the semantics defined in section~\ref{c:semantics}. In more detail, a reasoning tool can have the following capabilities:
 \begin{itemize}
-\item \emph{simple logical consequence}, i.e.\ checking whether all sentences are marked as \syntax{\%implied} within basic OMS
+\item \emph{simple logical consequence}, i.e.\ checking whether all sentences that are marked as \syntax{\%implied} within basic OMS
 and extensions are logical consequences
 of the enclosing OMS;
-\item \emph{structured logical consequence}, i.e.\ checking whether all sentences are marked as \syntax{\%implied} are logical consequences
+\item \emph{structured logical consequence}, i.e.\ checking whether all sentences that are marked as \syntax{\%implied} are logical consequences
   of the enclosing OMS and whether all entailments in a DOL document
   have a defined semantics;
 \item \emph{interpretation}, i.e.\ checking whether all interpretations in a DOL document have a defined semantics;
@@ -4416,7 +4428,7 @@ An \syntax{ExtendingOMS} can be one of the following:
 language (which is defined outside this standard)\footnote{In this place, any OMS in a conforming serialization of a conforming OMS language is permitted.  
 However, \DOL's module sublanguage should be given preference over the module sublanguage of 
 the respective conforming OMS language; \eg \DOL's OMS reference and extension construct should be preferred over OWL's import construct.};
-\item a reference to an OMS existing on the Web (\syntax{OMSReference}); or
+\item a reference (through an IRI) to an OMS (\syntax{OMSReference}); or
 \item a \syntax{RelativeClosureOMS}, applying a closure operator to a
   basic OMS or OMS reference (these two are hence joined into
   \syntax{ClosableOMS}). A closure forces the subsequently declared
