added dangling bib references imported from RFP; missing: V-model

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3102,8 +3102,8 @@ standard documents.
 
 In order to achieve interoperability during ontology development it is often necessary to describe 
 concepts in a language more expressive than OWL.  Therefore, it is common practice to informally 
-annotate OWL ontologies with FOL axioms (e.g., Keet's mereotopological ontology [Part-Whole], 
-Dolce Lite [Dolce-lite], BFO-OWL). OWL is used because of better tool support, FOL because of 
+annotate OWL ontologies with FOL axioms (e.g., Keet's mereotopological ontology \cite{KeetEtAl12}, 
+Dolce Lite \cite{dolce-web}, BFO-OWL). OWL is used because of better tool support, FOL because of 
 greater expressiveness. However, relegating FOL axioms to  informal annotations means that these 
 are not available for machine processing.  Another example of this problem is the following: For 
 formally representing concept schemes (including taxonomies, thesauri and classification schemes) 
@@ -3170,7 +3170,7 @@ sample orchestration of interactions between the foundational and domain ontolog
 languages is depicted in Figure \ref{f:DOL-mapping} below.
 
 DOL  provides the framework for integrating different domain ontologies, aligning these to 
-foundational ontologies [Alignment1-2] and combining the aligned ontologies into a coherent 
+foundational ontologies \cite{DBLP:books/daglib/0032976,AlignmentAPI} and combining the aligned ontologies into a coherent 
 integrated ontology -- even across different ontology languages. Thus, \DOL  enables ontology 
 developers to utilize the complete, and most expressive, foundational ontologies for ontology 
 integration and validation purposes. 
@@ -3286,7 +3286,7 @@ require a more expressive language, such as OWL or Common Logic, which operate u
 whole large dataset into OWL or first-order logic. To `meet in the middle', it is possible to declare bridge rules (i.e., a mapping layer) that can link the metadata to 
 the data. This approach can be used for intelligent data analysis that combines the data and metadata through querying the system. It enables the analysis of the 
 data on the conceptual layer, instead of users having to learn the SQL/SPARQL query languages and how the data is stored. There are various tools and theories 
-to realize this, which is collectively called Ontology-Based Data Access/Management, see also [OBDA].
+to realize this, which is collectively called Ontology-Based Data Access/Management, see also \cite{CalvaneseEtAl11}.
 
 The languages for representing the metadata or ontology, for representing the bridge rules or mapping assertions, and for representing the data are different yet 
 they need to be orchestrated and handled smoothly in the system, be this for data analytics for large enterprises, for formulating policies, or in silico biology in the 
@@ -3393,7 +3393,7 @@ those industries such as in microprocessor design.
 
 Typically, a requirement specification is refined into a
 design specification and then an implementation, often involving
-several intermediate steps (see, e.g. the V-model [V-model], although
+several intermediate steps (see, e.g. the V-model \cite{V-model}, although
 this does not require formal specification).  There are numerous
 specification formalisms in use, including the OMG's SysML language;
 moreover, often during development, the formalism needs to be changed
