--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -306,6 +306,14 @@ ZimmerEuze06,
   journal = {WonderWeb Deliverable, Report No.\ 18 of the Laboratory for Applied Ontology -- ISTC-CNR, Dec.\ 2003. \url{http://www.loa-cnr.it/Papers/D18.pdf}},
   year = 2003,
 }
+
+@article{dolce-web,
+  author = {C. Masolo and S. Borgo and A. Gangemi and N. Guarino and A. Oltramari},
+  title = {Descriptve Ontology for Linguistic and Cognitive Engineering},
+  journal = {\url{http://www.loa.istc.cnr.it/DOLCE.html}},
+}
+
+
 @article{OWLTime,
   author = {J.R. Hobbs and F. Pan},
   title = {An Ontology of Time for the Semantic Web},
@@ -369,6 +377,20 @@ ZimmerEuze06,
   journal = {In: Gerhard Brewka and Jerome Lang, 11th International Conference on Principles of Knowledge Representation and Reasoning (KR'08), 673-683, AAAI Press 2008},
   year = 2008,
 }
+
+
+@InProceedings{KeetEtAl12,
+  author = 	 {Keet, C.M. and Fern\'andez-Reyes, F.C. and Morales-Gonz\'alez, A.},
+  title = 	 {Representing mereotopological relations in OWL ontologies with OntoPartS},
+  booktitle = {Proceedings of the 9th Extended Semantic Web Conference (ESWC'12), 29-31 May 2012, Heraklion, Crete, Greece},
+  year = 	 {2012},
+  volume = 	 {7295},
+  series = 	 {Lecture Notes in Computer Science},
+  pages = 	 {240--254},
+  publisher = {Springer},
+}
+
+ . In: . ,  LNCS  , .
 
 @Article{BizerHeath09,
   author = 	 {Bizer, C. and Heath, T.},
@@ -835,4 +857,15 @@ YEAR = 1990}
   year =     2009,
   month = oct,
   date = {2009-10-27}}
+
+
+@Article{CalvaneseEtAl11,
+  author = 	 {Diego Calvanese and Giuseppe De Giacomo and Domenico Lembo and Maurizio Lenzerini and Antonella Poggi and Mariano Rodriguez-Muro and Riccardo Rosati and Marco Ruzzi and Domenico Fabio Savo},
+  title = 	 {The MASTRO system for ontology-based data access},
+  journal = 	 {Semantic Web},
+  year = 	 {2011},
+  volume = 	 {2},
+  number = 	 {1},
+  pages = 	 {43--53},
+}
 
