--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3272,9 +3272,9 @@ end
 Data collection has become easier and much more widespread over the years. This data has to be 
 assigned a meaning somehow, which occurs traditionally in the  form of metadata annotations. For 
 instance, consider geographical datasets derived from satellite data and raw sensor readings. 
-Current implementations in, e.g., ecological economics\cite{bagstad_aries_2011} require manual 
+Current implementations in, e.g., ecological economics \cite{bagstad_aries_2011} require manual 
 annotation of datasets with the information relevant for their processes. While there have been 
-attempts to standardize such information\cite{european_comission_inspire_2014}, metadata for 
+attempts to standardize such information \cite{european_comission_inspire_2014}, metadata for 
 datasets of simulation results are more difficult to standardize. Moreover, it is 
 resource-consuming to link the data to the metadata, to ensure the metadata itself is of good 
 quality and consistent, and to actually exploit the metadata when querying the data for data 
@@ -10939,19 +10939,19 @@ This annex sketches scenarios that outline how \DOL is intended to be applied.  
 The OWL Time ontology\footnote{\url{http://www.w3.org/TR/2006/WD-owl-time-20060927/}} covers temporal concepts such as instants and intervals and has been designed for describing the temporal content of Web pages and the temporal properties of Web services.  While OWL is suitable for these intended applications, only a first-order axiomatization is capable of faithfully capturing all relevant notions, such as the trichotomy of the ``before'' relation: One instant is either before another one, or at the same time, or after.  Moreover, a relationship between facts expressed in terms of instants and facts expressed in terms of intervals (both of which is, independently, possible in OWL), can only be established via first-order logic, \eg by declaring an interval of length zero equivalent to an instant. 
 
 A separate first-order axiomatization of OWL Time exists
-[\cite{OWLTime},\cite{OWLSTime}].  \DOL would instead provide the mechanism of modeling
+\cite{OWLTime,OWLSTime}.  \DOL would instead provide the mechanism of modeling
 OWL Time as one coherent heterogeneous ontology, using OWL and, \eg,
 Common Logic.\footnote{This is also a use case for multiple namespaces:
   OWL supports namespaces, CL does not.}  For the temporal description
 logic $\mathcal{DLR_{US}}$ for knowledge bases and logic-based
-temporal conceptual data modeling [\cite{Artale02},\cite{Artale07a}];
+temporal conceptual data modeling \cite{Artale02,Artale07a};
 $\mathcal{DLR_{US}}$ combines the propositional temporal logic with
 the {\em Since} and {\em Until} operators and the (non-temporal)
 description logic $\mathcal{DLR}$ and can be regarded as an expressive
 fragment of the first-order temporal logic $L^{since, until}$. Within
 \DOL, this would enable one to have `lightweight' time aspects with OWL
 Time, which are then properly formalized with $\mathcal{DLR_{US}}$ or
-a leaner variant TDL-Lite [\cite{Artale07time}], where notions such as
+a leaner variant TDL-Lite \cite{Artale07time}, where notions such as
 (some time) ``before'' are given a formal semantics of the intended
 meaning that the plain OWL Times human-readable object property does
 not have. The latter, then, would enable the modeler to represent the
@@ -10968,7 +10968,7 @@ the ontology about, e.g., the distinction how a human brain is part of
 a human (humans cannot live without it), versus how a hand is part of
 a human (humans can live without it), versus how the hand is part of,
 say, a boxer, which is essential to the boxer but only for has long as
-he is a boxer [\cite{AGK08}].
+he is a boxer \cite{AGK08}.
 
 \end{usecase}
 
@@ -11270,7 +11270,7 @@ represent rules from the IRI-RFC.
 
 One should take note that the \texttt{<scheme>} rule does not include a
 \texttt{i}-prefix.  This is because \texttt{<scheme>} is actually taken from
-RFC 3986\cite{rfc3986}, which defines the URI.
+RFC 3986 \cite{rfc3986}, which defines the URI.
 
 \begin{figure}[b]
   \centering
