examples of categories

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -11373,6 +11373,48 @@ A category $C$ consists of
  \end{itemize} 
 \end{definition}
 
+\begin{example}
+ $\Set$ is the category whose class of objects is the class of all sets, 
+ $Set(A,B)$ is the set of all functions from $A$ to $B$ for any sets $A$ and $B$,
+ $id_A$ is the identity function on a set $A$ and the composition 
+ is the usual composition of functions.
+\end{example}
+
+\begin{example}
+ $Rel$ is the category whose class of objects is the class of all sets,
+ $Rel(A,B)$ is the class of all relations $R \subseteq A \times B$, for any sets
+ $A$ and $B$, $id_A$ is the diagonal relation $\{(a,a) \mid a \in A\}$ for a set $A$ 
+ and the composition of $R\in Rel(A,B)$ with $S\in Rel(B,C)$ for three sets
+ $A,B,C$ is defined as $\{(a,c) \mid \text{exists } b \in B \text{ such that } 
+ (a,b)\in R \text{ and } (b,c)\in S\}$.
+\end{example}
+
+\begin{example}
+ The category of unsorted first-order signatures has as objects tuples of the form
+ $F = (F_i)_{i\in \mathbb{N}}$ 
+ where $F_i$ is a set (of function symbols of arity $i$, for 
+ each natural number $i$). Given two objects $F$ and $G$, a morphism
+ $\sigma: F \to G$ is a family of functions $(\sigma_i:F_i\to G_i)_{i\in\mathbb{N}}$, 
+ which means that the arities of function symbols are preserved by morphisms.
+ The identity morphism for an object $F$ is the family of identity functions
+ $(id_{F_i})_{i\in\mathbb{N}}$ and the composition is defined component-wise:
+ if $\sigma:F \to G$ and $\tau:G \to H$ are signature morphisms between the signatures
+ $F, G$ and $H$, then
+ $\sigma;\tau = (\sigma_i;\tau_i)_{i\in\mathbb{N}}$
+\end{example}
+
+\begin{example}
+ Given an unsorted first-order signature $F$, a model $M$ of $F$ consists of an 
+ universe $M_U$ together with an interpretation of each function symbol
+ $f \in F_i$ as a function $M_f$ taking $i$ arguments in $M_U$ with result in $M_U$. 
+ Given two such models $M$ and $N$, a model homomorphism $m : M \to N$
+ is a function $m: M_U \to N_U$ such that for each $i\in \mathbb{N}$ and each
+ $f\in F_i$ we have that $m(M_f(x_1,\ldots, x_n)) = N_f(m(x_1), \ldots, m(x_n))$ for
+ every $x_1,\ldots x_n$ in $M_U$. The identity function on $M_U$ is a model homomorphism
+ on $M$ and the composition is  the usual composition of functions. This gives us the
+ category of first-order models of $F$.
+\end{example}
+
 \begin{definition}
 Let $C$ and $D$ be two categories. A \emph{functor} $F: C \to D $ is a mapping that 
 \begin{itemize}
