--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -11464,6 +11464,12 @@ Let $C$ and $D$ be two categories. A \emph{functor} $F: C \to D $ is a mapping t
  }$$ 
 \end{definition}
 
+\begin{example}
+ There is an inclusion natural transformation $\iota:\mathcal{P}_{fin}\to\mathcal{P}$,
+ i.e. for each set $A$, $\iota : \mathcal{P}_{fin}(A)\to\mathcal{P}(A)$ is the inclusion
+ function (each finite subset of a set is also a subset of the set).
+\end{example}
+
 %\infannex{Bibliography}
 \newpage
 
