more details pics for DOL ontology

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7784,12 +7784,27 @@ Moreover, processes (like theorem proving) provide algorithmic
 procedcures for manipulating DOL librares, and tools implement
 these in software.
 
-The top level object properties are structured in a similar way:
+Below the top-level classes, the class structure is as follows:
+ 
+%\includegraphics[width=0.8\textwidth]{illustrations/linguistic-entity2.png}
+
+\includegraphics[width=1\textwidth]{illustrations/linguistic-entity.png}
+
+\includegraphics[width=1\textwidth]{illustrations/mathematical-entity.png}
+
+\includegraphics[width=0.4\textwidth]{illustrations/semantic-entity.png}
+
+\includegraphics[width=0.4\textwidth]{illustrations/web-entity.png}
+
+\includegraphics[width=0.4\textwidth]{illustrations/process.png}
+
+\includegraphics[width=0.4\textwidth]{illustrations/tool.png}
+
+The top level object properties are structured in a way similar 
+to that of the top-level classes:
 \medskip
 
 \includegraphics[width=0.4\textwidth]{illustrations/dol-onto-properties.png}
-
-
 
 
 \section{\DOL Registry}\label{a:registry}
