fixed URL syntax

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -970,7 +970,7 @@ vice versa.	&
 of the EBNF concrete syntax (clause 
 \ref{c:abstract-syntax}); this makes a round-trip mapping between both straight-forward. Moreover, the 
 round-trip mapping has been implemented in form of a parser and a printer as part of the 
-heterogeneous tool set  (see appendix~\ref{a:tools} and  \url{http:hets.eu}).
+heterogeneous tool set  (see appendix~\ref{a:tools} and  \url{http://hets.eu}).
    \\ \hline
 %
 6.5.3(d)& 
